--- a/css/responsive.css
+++ b/css/responsive.css
@@ -93,7 +93,9 @@
 |   |   |   Large Devices (Desktop & Laptops)
 ========================================================= */
 
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+    
+}
 
 /* Medium Devices (Landscape Tablets & Medium Desktop) */
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -110,16 +112,8 @@
         font-size: 16px;
     }
 
-    .technology-item-details span {
-        height: 9px;
-        width: 23px;
-        border-top: 2px solid #00adb5;
-        border-bottom: 2px solid #00adb5;
-        margin: 0px auto 5px auto;
-    }
-
     /* Technology Item Detail effect small items */
-    #technology-item-details-small h3 {
+    .technology-item-details-small h3 {
         font-weight: 500;
         font-size: 9px;
         margin: 5px;
@@ -182,14 +176,18 @@
 
     /* Technology Item Detail effect small items */
 
-    #technology-item-details-small {
+    .technology-item-details-small {
         font-weight: 500;
         top: 30%;
     }
 
-    #technology-item-details-small h3 {
+    .technology-item-details-small h3 {
         font-weight: 500;
         font-size: 8px;
+    }
+    
+    .technology-item-details-small span {
+        display: none;
     }
 
     /* Contact */
@@ -344,27 +342,31 @@
 
     .technology-item-details h3 {
         font-weight: 500;
-        font-size: 10px;
+        font-size: 20px;
     }
-
+    
     .technology-item-details span {
         display: inline-block;
         border-top: 2px solid #00adb5;
         border-bottom: 2px solid #00adb5;
         height: 8px;
-        width: 15px;
+        width: 20px;
         margin: 0px auto 5px auto;
     }
 
     /* Technology Item Detail effect small items */
 
-    #technology-item-details-small {
+    .technology-item-details-small {
         font-weight: 500;
     }
 
-    #technology-item-details-small h3 {
+    .technology-item-details-small h3 {
         font-weight: 500;
-        font-size: 8px;
+        font-size: 10px;
+    }
+    
+    .technology-item-details-small span {
+        display: none;
     }
 
     /* Map */
@@ -389,7 +391,6 @@
         padding-bottom: 10px;
         font-size: 11px;
     }
-
 }
 
 /*  ========================================================
@@ -419,6 +420,42 @@
     #home-text p {
         font-size: 15px;
     }
+    
+    /* Technology Item Details */
+
+    .technology-item-details {
+        font-weight: 500;
+        top: 30%;
+    }
+
+    .technology-item-details h3 {
+        font-weight: 500;
+        font-size: 15px;
+    }
+    
+    .technology-item-details span {
+        display: inline-block;
+        border-top: 2px solid #00adb5;
+        border-bottom: 2px solid #00adb5;
+        height: 8px;
+        width: 20px;
+        margin: 0px auto 5px auto;
+    }
+    
+    /* Technology Item Detail effect small items */
+
+    .technology-item-details-small {
+        font-weight: 500;
+    }
+
+    .technology-item-details-small h3 {
+        font-weight: 500;
+        font-size: 8px;
+    }
+    
+    .technology-item-details-small span {
+        display: none;
+    }
 
 }
 
@@ -440,7 +477,6 @@
         font-weight: 200;
     }
 
-
     #image-home {
         position: absolute;
         text-align: center;
@@ -454,5 +490,35 @@
     #hobby-text {
         font-size: 15px;
     }
+    
+    /* Technology Item Details */
 
+    .technology-item-details {
+        font-weight: 500;
+        top: 30%;
+    }
+
+    .technology-item-details h3 {
+        font-weight: 500;
+        font-size: 15px;
+    }
+    
+    .technology-item-details span {
+        display: none;
+    }
+    
+    /* Technology Item Detail effect small items */
+
+    .technology-item-details-small {
+        font-weight: 500;
+    }
+
+    .technology-item-details-small h3 {
+        font-weight: 500;
+        font-size: 7px;
+    }
+    
+    .technology-item-details-small span {
+        display: none;
+    }
 }
