--- a/css/style.css
+++ b/css/style.css
@@ -263,8 +263,8 @@ p {
 }
 
 .about-bio img:hover {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .subheading {
@@ -703,16 +703,16 @@ ul.social-list li:nth-child(2) a:hover {
 
 /* Item Detail effect small items */
 
-#technology-item-details-small {
+.technology-item-details-small {
     top: 35%;
 }
 
-#technology-item-details-small h3 {
+.technology-item-details-small h3 {
     font-size: 10px;
     margin: 5px;
 }
 
-#technology-item-details-small span {
+.technology-item-details-small span {
     border-top: none;
     border-bottom: none;
     height: 10px;
@@ -724,10 +724,12 @@ ul.social-list li:nth-child(2) a:hover {
 
 .technology-item {
     transition: transform .9s ease;
+    position: relative;
 }
 
 .technology-item:hover {
     transform: scale(1.05);
+    z-index: 3;
 }
 
 /*  ===========================================
@@ -773,13 +775,13 @@ ul.social-list li:nth-child(2) a:hover {
 
 #map {
     width: 100%;
-    height: 430px;
+    height: 530px;
     background: #eeeeee;
 }
 
 #panel {
     width: 100%;
-    height: 400px;
+    height: 530px;
 }
 
 /*  ===========================================
@@ -799,3 +801,25 @@ footer p {
 footer p span {
     color: #00adb5;
 }
+
+/*  ===========================================
+|   |   |   |      Animation
+============================================ */
+
+#home-heading-1 {
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-delay: 1s;    
+    animation-delay: 1s;
+}
+
+#home-text {
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+}
+
+
+
+
